styles.css
a:link{
    color: #ffd748;
    text-decoration: none; 
}
a:hover{
    color: #406e8eff;
}
a:visited{
    color: #f0cf57;
}
a:visited:hover{
    color: #406e8eff;
}
body{
    background-color:#23395bff;
    display: block; 
    margin: 0px; 
    padding: 0px;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
}
footer{
    width: 95%;

}
h1{
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 65px;
    color:#cbf7edff;
}
h2{
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 45px;
    color:#cbf7edff;
    margin-left: 25px;
}
img{
    display: block;
    position: relative;

}

p{
    color:#cbf7edff;
    margin-left: 25px;
}

/* classes */
.about-me-container{
    margin: 20px 0px;
    width: 100%;
    height: auto;
    overflow: hidden;
    position: relative; 
}
.about-me-head{
    z-index: 1;
}
.about-me-text{
    color: white;
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 40px;
    position: absolute;
    text-align: center;
    width: 95%;
    top: 45%;
}
.abz-container{
    position: relative;
}
.body-wrap{
    overflow-x: hidden;
}
.contact-container{
    display: inline-grid;
    grid-template-columns: 5% 10% 10% 10% 65%;
    grid-template-rows: auto;
}
.contact-link{
    justify-items: center;
    align-items: center;
    height: auto;
    width: 80%;
}
.background-img{
    overflow: hidden;
        width: auto;
        height: 25%;
        z-index: -1;
}
.footer-text{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 25px;
}
.icon-link{
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 10px;
}
.js-unfade{
    opacity: 1;
    transition-delay: 3000ms;
    transition: opacity 3000ms;
}
.js-unfade.fade{
    opacity: .3;
}
.js-scroll{
    transition: opacity 1000ms;
    transition-delay: 500ms;
    opacity: 0;
}
.js-scroll.scrolled{
    opacity: 1;
}
.jyv-container{
    position: relative;
}
.nav-container{
    display: inline-flex;
    justify-content: space-between;
    margin-left: 25px;
    width: 100%;
    
}
.navigation-items{
    padding-top: 58px;
    padding-right: 50px;
}
.navigation-item{
    display: inline;
    Font-Family: 'Work Sans', Sans-Serif;
    Font-Size: 35px;
    padding-left: 30px;
    float: left;
}
.rd-container{
    position: relative;
}
.sf-container{
    position: relative;
}
.spacer{
    height: 50px;
}
.tech-container{
    width: 100%;
}
.tech-icons{
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: auto;
}
.tech-image{
    height: auto;
    width: 90%;
}
.tech-text{
    color: white;
    Font-Family: 'Open Sans', Sans-Serif;
    Font-Size: 40px;
    text-align: left;
    width: 100%;
    top: 45%;
}

/* ids */
#contact-title{
    grid-column: 1/6;
}
#github{
    grid-column: 2/2;
}
#linked-in{
    grid-column: 3/3;
}
#jyv-img{
    filter: brightness (80%);
} 
#rd-img{
    width: 100%;
    height: auto;
}

/* Media Queries */

@media only screen and (max-width: 480px){
    h1{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 35px;
        color:#cbf7edff;
    }
    h2{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 35px;
        color:#cbf7edff;
        margin-left: 25px;
    }
    p{
        margin-left: 12px;
    }
    .about-me-head{
        Font-Size: 35px;
    }
    .about-me-text{
        Font-Family: 'Open Sans', Sans-Serif;
        Font-Size: 25px;
    }
    .background-img{
        overflow: hidden;
            width: auto;
            height: 1000px;
            z-index: -1;
    }
    #rd-img{
        width: auto;
        height: 1000px;
        justify-self: center;
    }
    .nav-container{
        margin-left: 25px;
        width: 100%;
    }
    .navigation-items{
        padding-top: 20px;
        padding-right: 30px;
    }
    .navigation-item{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 20px;
        padding-left: 10px;
        float: left;
    }
}
@media only screen and (min-width:
480px) and (max-width: 768px){
    h1{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 37px;
        color:#cbf7edff;
    }
    h2{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 35px;
        color:#cbf7edff;
        margin-left: 25px;
    }
    .about-me-head{
        Font-Size: 35px;
    }
    .about-me-text{
        Font-Family: 'Open Sans', Sans-Serif;
        Font-Size: 25px;
    }
    .nav-container{
        margin-left: 25px;
        width: 100%;
        padding-right: 40px;
    }
    .navigation-items{
        padding-top: 20px;
        padding-right: 30px;
        
    }
    .navigation-item{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 25px;
        padding-left: 10px;
        float: left;
    }
}
@media only screen and (min-width:
768px) and (max-width: 1024px){
    h1{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 42px;
        color:#cbf7edff;
    }
    h2{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 35px;
        color:#cbf7edff;
        margin-left: 25px;
    }
    .about-me-head{
        Font-Size: 35px;
    }
    .about-me-text{
        Font-Family: 'Open Sans', Sans-Serif;
        Font-Size: 30px;
    }
    
    .nav-container{
        margin-left: 25px;
        width: 100%;
        margin-right: 30px;
    }
    .navigation-items{
        padding-top: 25px;
        padding-right: 30px;
        
    }
    .navigation-item{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 30px;
        padding-left: 10px;
        float: left;
    }
   
}
@media only screen and (min-width:
1024px) and (max-width: 1600px){
    h1{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 50px;
        color:#cbf7edff;
    }
    h2{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 37px;
        color:#cbf7edff;
        margin-left: 25px;
    }
    body{
        overflow-x: hidden;
    }
    .about-me-head{
        Font-Size: 37px;
    }
    .about-me-text{
        Font-Family: 'Open Sans', Sans-Serif;
        Font-Size: 34px;
        width: 95%;
    }
    
    .nav-container{
        margin-left: 25px;
        width: 100%;
        margin-right: 30px;
    }
    .navigation-items{
        padding-top: 30px;
        padding-right: 30px;
        
    }
    .navigation-item{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 35px;
        padding-left: 15px;
        float: left;
    }
}
@media only screen and (min-width:
1600px){
    h1{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 65px;
        color:#cbf7edff;
    }
    h2{
        Font-Family: 'Work Sans', Sans-Serif;
        Font-Size: 45px;
        color:#cbf7edff;
        margin-left: 25px;
    }
    .about-me-text{
        color: white;
        Font-Family: 'Open Sans', Sans-Serif;
        Font-Size: 40px;
    }
   
}
/* js to add:
    flashing down arrow on page load indicating that its a scrollable page? 
*/
/* Fonts 

Font-Family: 'Work Sans', Sans-Serif;
Font-Size: 45px;
Font-Family: 'Open Sans', Sans-Serif;
Font-Size: 15px;

*/
/* Colors 

CSS HEX 
--rich-black-fogra-29: #161925ff;
--prussian-blue: #23395bff;
--queen-blue: #406e8eff;
--cadet-grey: #8ea8c3ff;
--light-cyan: #cbf7edff;
-- LINK COLOR: #f0cf57;

CSS HSL 
--rich-black-fogra-29: hsla(228, 25%, 12%, 1);
--prussian-blue: hsla(216, 44%, 25%, 1);
--queen-blue: hsla(205, 38%, 40%, 1);
--cadet-grey: hsla(211, 31%, 66%, 1);
--light-cyan: hsla(166, 73%, 88%, 1);


js & css animations to add
- on scroll text items fade in √
- when text items fade in the images blur √
- when text items are out of view the images slowly become clear √
- technology icons also buttons that depress sligthly on hover and fully on click
*/

